# sensor-characterisation

./: .gitignore  CMakeLists.txt  README.md
context/: configOmegaATI.ini  experiment01.ini
examples/: loadData.m  startOmega.bat  startYARP_NIDAQ.bat
examples/context/: applyConstantForce.ini  configOmegaATI.ini  linearity-02.ini
scripts/: startATIOmega.bat  startDataCollection.bat
src/: forceTorqueData.cpp  forceTorqueData.h  main.cpp  omegaATIPubThread.cpp  omegaATIPubThread.h  omegaATIThread.cpp  omegaATIThread.h  omegaData.cpp  omegaData.h  omegaFTHybridController.h  omegaForceController.h  pidController.cpp  pidController.h  pidPositionController.h
